--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "build": "sucrase ./src -d ./dist --transforms imports",
+    "start": "node dist/app.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
