--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server.js",
+    "build": "sucrase ./src -d ./dist --transforms imports",
     "start": "node dist/server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.8"
   },
